k8s/vcluster/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: vcluster-ingress
  namespace: training9-vcluster
spec:
  ingressClassName: nginx
  rules:
  - host: training9.vcluster.calllab.co.th
    http:
      paths:
      - backend:
          service:
            name: training9
            port:
              number: 443
        path: /
        pathType: ImplementationSpecific
